<resources>
    <string name="app_name">HackFSU</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>

    <string name="popfoods">Popular Foods</string>
    <string name="pizza">Pizza</string>
    <string name="burgers">Burgers</string>
    <string name="steak">Steak</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="everything">Errrthang</string>

    <string name="region">Regions/Ethnicities</string>
    <string name="american">American</string>
    <string name="chinese">Chinese</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="central_american">Central American</string>
    <string name="south_american">South American</string>

    <string name="custom_food">Custom</string>

    <string name="submit_survey">Let\'s Eat!</string>
    <string name="title_activity_eating__choice">Going for a Munch</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="auth0_client_id">BwiLoAzGcVFjwdfJ9JBIPbilN6O1geQE</string>
    <string name="auth0_domain">idcruz.auth0.com</string>

    <string name="auth0_preferences">AUTH0_SHARED_PREFERENCES_KEY</string>
    <string name="refresh">Get New ID With a RefreshTokenID</string>
    <string name="token">Get New ID With a TokenID</string>
    <string name="logout">Logout</string>
    <string name="test_my_friends">Test for Friends</string>

</resources>
