<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_interests"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.davidcruz.hackfsu.InterestsActivity">

    <ScrollView
        android:id="@+id/scrollview_interests"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textview_Foods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popfoods"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza"
                android:onClick="onCheckboxClicked"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burgers"
                android:onClick="onCheckboxClicked"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steak"
                android:onClick="onCheckboxClicked"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sandwiches"
                android:onClick="onCheckboxClicked"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/everything"
                android:onClick="onCheckboxClicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/american"
                android:onClick="onCheckboxClicked"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chinese"
                android:onClick="onCheckboxClicked"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mediterranean"
                android:onClick="onCheckboxClicked"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/central_american"
                android:onClick="onCheckboxClicked"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/south_american"
                android:onClick="onCheckboxClicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_food"/>

            <!-- need to add custom implementation, dynamically add chkbox with txt -->

            <Button
                android:id="@+id/btn_submitSurvey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_survey"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
